Fix coverage generation command

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Generate test coverage
         run: |
           npm ci
-          npm coverage
+          npm run coverage
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
